Changes made to fix issue with python 3.9 submissions and start of file progress tracking

--- a/valhub/Dockerfile
+++ b/valhub/Dockerfile
@@ -1,4 +1,4 @@
-FROM python:3.11-slim as base
+FROM python:3.11-slim
 
 # docker build --progress=plain -t "hmm:Dockerfile" -f valhub/Dockerfile .
 WORKDIR /root
@@ -13,16 +13,7 @@ COPY . .
 
 
 # Set Django admin username, password, and other environment variables
-ARG admin_username
-ARG admin_password
-ARG admin_email
-ARG djangosk
-
-ENV DJANGO_SUPERUSER_USERNAME=$admin_username
-ENV DJANGO_SUPERUSER_PASSWORD=$admin_password
-ENV DJANGO_SUPERUSER_EMAIL=$admin_email
-ENV DJANGO_SECRET_KEY=${djangosk}
-ENV PORT 8005
+ENV PORT=8005
 
 RUN apt-get update -qq
 RUN apt-get install -y libpq-dev python3-psycopg2
@@ -34,6 +25,6 @@ WORKDIR /root/valhub
 RUN python3 -m pip install -r requirements.txt
 
 # RUN cd ./valhub
-RUN python3 manage.py makemigrations
-RUN python3 manage.py collectstatic --noinput
+# RUN python3 manage.py makemigrations
+# RUN python3 manage.py collectstatic --noinput
 CMD ["/usr/bin/supervisord", "-c", "/root/valhub/supervisord.conf"]
