--- a/valhub/supervisord.conf
+++ b/valhub/supervisord.conf
@@ -1,12 +1,26 @@
 [supervisord]
 nodaemon = true
 
+[program:valhub_makemigrations]
+directory=/root/valhub
+command=python3 /root/valhub/manage.py makemigrations
+autostart=true
+autorestart=false
+
+[program:valhub_collectstatic]
+directory=/root/valhub
+command=python3 /root/valhub/manage.py collectstatic --noinput
+autostart=true
+autorestart=false
+depends_on=valhub_makemigrations
+
 [program:valhub_webserver]
 directory=/root/valhub
 command=python3 /root/valhub/manage.py runserver 0.0.0.0:8005
 stdout_logfile=/dev/fd/1
 stdout_logfile_maxbytes=0
 redirect_stderr=true
+depends_on=valhub_collectstatic
 autostart=true
 
 [program:valhub_migrate]
