--- a/valhub/supervisord.conf
+++ b/valhub/supervisord.conf
@@ -1,5 +1,6 @@
 [supervisord]
 nodaemon = true
+log_level = debug
 
 [program:valhub_makemigrations]
 directory=/root/valhub
@@ -7,12 +8,33 @@ command=python3 /root/valhub/manage.py makemigrations
 autostart=true
 autorestart=false
 
+[program:valhub_migrate]
+directory=/root/valhub
+command=python3 /root/valhub/manage.py migrate
+autorestart=false
+depends_on=valhub_makemigrations
+autostart=true
+
 [program:valhub_collectstatic]
 directory=/root/valhub
 command=python3 /root/valhub/manage.py collectstatic --noinput
 autostart=true
 autorestart=false
-depends_on=valhub_makemigrations
+depends_on=valhub_migrate
+
+[program:valhub_initial_data]
+directory=/root/valhub
+command=python3 /root/valhub/manage.py loaddata initial_data.json
+autostart=true
+autorestart=false
+depends_on=valhub_collectstatic
+
+[program:valhub_superuser]
+directory=/root/valhub
+command=python3 /root/valhub/manage.py createsuperuser --noinput
+autorestart=false
+depends_on=valhub_initial_data
+autostart=true
 
 [program:valhub_webserver]
 directory=/root/valhub
@@ -20,25 +42,5 @@ command=python3 /root/valhub/manage.py runserver 0.0.0.0:8005
 stdout_logfile=/dev/fd/1
 stdout_logfile_maxbytes=0
 redirect_stderr=true
-depends_on=valhub_collectstatic
-autostart=true
-
-[program:valhub_migrate]
-directory=/root/valhub
-command=python3 /root/valhub/manage.py migrate
-autorestart=false
-numprocs=1
-startretries=0
-startsecs=10
-depends_on=valhub_webserver
-autostart=true
-
-[program:valhub_superuser]
-directory=/root/valhub
-command=python3 /root/valhub/manage.py createsuperuser --noinput
-autorestart=false
-numprocs=1
-startretries=0
-startsecs=10
-depends_on=valhub_migrate
+depends_on=valhub_superuser
 autostart=true
