--- a/valhub/supervisord.conf
+++ b/valhub/supervisord.conf
@@ -1,46 +1,8 @@
 [supervisord]
 nodaemon = true
-log_level = debug
+loglevel = debug
 
-[program:valhub_makemigrations]
-directory=/root/valhub
-command=python3 /root/valhub/manage.py makemigrations
+[program:startup]
+command=/bin/bash /root/valhub/startup.sh
 autostart=true
 autorestart=false
-
-[program:valhub_migrate]
-directory=/root/valhub
-command=python3 /root/valhub/manage.py migrate
-autorestart=false
-depends_on=valhub_makemigrations
-autostart=true
-
-[program:valhub_collectstatic]
-directory=/root/valhub
-command=python3 /root/valhub/manage.py collectstatic --noinput
-autostart=true
-autorestart=false
-depends_on=valhub_migrate
-
-[program:valhub_initial_data]
-directory=/root/valhub
-command=python3 /root/valhub/manage.py loaddata initial_data.json
-autostart=true
-autorestart=false
-depends_on=valhub_collectstatic
-
-[program:valhub_superuser]
-directory=/root/valhub
-command=python3 /root/valhub/manage.py createsuperuser --noinput
-autorestart=false
-depends_on=valhub_initial_data
-autostart=true
-
-[program:valhub_webserver]
-directory=/root/valhub
-command=python3 /root/valhub/manage.py runserver 0.0.0.0:8005
-stdout_logfile=/dev/fd/1
-stdout_logfile_maxbytes=0
-redirect_stderr=true
-depends_on=valhub_superuser
-autostart=true
