--- a/valhub/supervisord.conf
+++ b/valhub/supervisord.conf
@@ -2,7 +2,11 @@
 nodaemon = true
 loglevel = debug
 
-[program:startup]
-command=/bin/bash /root/valhub/startup.sh
+[program:valhub_webserver]
+directory=/root/valhub
+command=python3 /root/valhub/manage.py runserver 0.0.0.0:8005
+stdout_logfile=/dev/fd/1
+stdout_logfile_maxbytes=0
+redirect_stderr=true
 autostart=true
-autorestart=false
+autorestart=true
