--- a/ec2/Dockerfile
+++ b/ec2/Dockerfile
@@ -1,8 +1,7 @@
 FROM python:3.10-slim
 
 # docker build --progress=plain -t "hmm:Dockerfile" -f valhub/Dockerfile .
-WORKDIR /root
-RUN mkdir admin
+
 WORKDIR /root/admin
 COPY . .
 
@@ -17,5 +16,7 @@ RUN apt-get --assume-yes install python3-dev default-libmysqlclient-dev build-es
 RUN python3 -m pip install --upgrade pip
 RUN python3 -m pip install -r requirements.txt
 # RUN git clone https://github.com/kperrynrel/time-shift-validation-hub.git
+
+RUN chmod +x manage.sh
 
 ENTRYPOINT ["tail", "-f", "/dev/null"]
