--- a/.env.example
+++ b/.env.example
@@ -4,5 +4,5 @@ POSTGRES_USER=valhub
 admin_username=admin
 admin_password=admin
 admin_email=admin@admin.com
-DOCKER_HOST_VOLUME_DATA_DIR="<path-to-repository>/<repo-name>/workers/current_evaluation/data"
-DOCKER_HOST_VOLUME_RESULTS_DIR="<path-to-repository>/<repo-name>/workers/current_evaluation/results"
+DOCKER_HOST_VOLUME_DATA_DIR="C:/users/kperry/Documents/source/repos/pv-validation-hub/workers/current_evaluation/data"
+DOCKER_HOST_VOLUME_RESULTS_DIR="C:/users/kperry/Documents/source/repos/pv-validation-hub/workers/current_evaluation/results"
