--- a/ec2/requirements.txt
+++ b/ec2/requirements.txt
@@ -1,6 +1,5 @@
 numpy
 pandas
 boto3
-
-########## add analytical task/evaluation script dependcies here to be pre-installed on the runner.
-Requests==2.28.2
+requests
+boto3-stubs[s3]
