When inserting a new analysis while using --watch in docker compose, then you no longer need to manually rebuild the frontend image

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -95,12 +95,12 @@ services:
         develop:
             watch:
                 - action: sync
-                  path: ./pv-validation-hub-client
-                  target: /app
+                  path: ./pv-validation-hub-client/src
+                  target: /app/src
                   ignore:
                       - node_modules/
                 - action: rebuild
-                  path: package.json
+                  path: ./pv-validation-hub-client/public/static/assets/analysis
 
     sqs:
         image: softwaremill/elasticmq:latest
