--- a/ec2/analysis-tasks/az-tilt-estimation/assets/config.json
+++ b/ec2/analysis-tasks/az-tilt-estimation/assets/config.json
@@ -2,9 +2,19 @@
 	"category_name": "az_tilt_estimation",
 	"function_name": "estimate_az_tilt",
 	"comparison_type": "scalar",
-	"performance_metrics": [ "runtime", "absolute_error" ],
-	"allowable_kwargs": [ "latitude", "longitude", "data_sampling_frequency"],
-	"ground_truth_compare": [ "azimuth", "tilt" ],
+	"performance_metrics": [
+		"runtime",
+		"absolute_error"
+	],
+	"allowable_kwargs": [
+		"latitude",
+		"longitude",
+		"data_sampling_frequency"
+	],
+	"references_compare": [
+		"azimuth",
+		"tilt"
+	],
 	"public_results_table": "az-tilt-public-metrics.json",
 	"private_results_columns": [
 		"system_id",
