Updated runner with refactored code for public and private results

--- a/workers/src/docker/Dockerfile
+++ b/workers/src/docker/Dockerfile
@@ -19,6 +19,7 @@ RUN apt-get update && apt-get install -y \
 COPY requirements.txt .
 
 # Install the Python dependencies for the submission wrapper
+RUN pip install --upgrade pip
 RUN pip install --no-cache-dir -r requirements.txt
 
 ARG zip_file
