Updated analysis task with new required column and fields

--- a/ec2/analysis-tasks/time-shift-detection/config.json
+++ b/ec2/analysis-tasks/time-shift-detection/config.json
@@ -29,6 +29,7 @@
     "time_series"
   ],
   "public_results_table": "time-shift-public-metrics.json",
+  "private_results_table": "time-shift-private-metrics.json",
   "private_results_columns": [
     "system_id",
     "file_name",
