--- a/ec2/analysis-tasks/az-tilt-estimation/config.json
+++ b/ec2/analysis-tasks/az-tilt-estimation/config.json
@@ -1,5 +1,6 @@
 {
 	"category_name": "Azimuth-Tilt Estimation",
+	"s3_bucket_folder_name": "az-tilt-estimation",
 	"function_name": "estimate_az_tilt",
 	"comparison_type": "scalar",
 	"performance_metrics": [
@@ -47,6 +48,7 @@
 		"tilt"
 	],
 	"public_results_table": "az-tilt-public-metrics.json",
+	"private_results_table": "az-tilt-private-metrics.json",
 	"private_results_columns": [
 		"system_id",
 		"file_name",
