--- a/valhub/Dockerfile.prod
+++ b/valhub/Dockerfile.prod
@@ -56,12 +56,7 @@ RUN apt-get install -y python3-dev default-libmysqlclient-dev build-essential pk
     python3 -m pip install --upgrade pip && \
     python3 -m pip install -r requirements.txt
 
-# Create Django database migrations
-RUN python3 manage.py makemigrations
-RUN python3 manage.py collectstatic
-
 # Expose ports for incoming HTTP traffic
 EXPOSE 80 443 22 8005
 
-# Start Nginx and Supervisor
-CMD ["/usr/bin/supervisord", "-c", "/root/valhub/supervisord.prod.conf"]
+CMD ["/bin/bash", "/root/valhub/startup-prod.sh"]
