Added required session token to workflows

--- a/.github/workflows/deployapi.yml
+++ b/.github/workflows/deployapi.yml
@@ -17,6 +17,7 @@ env:
     ADE: ${{ secrets.ADE }}
     AK: ${{ secrets.AWS_ACCESS_KEY }}
     SAK: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+    AST: ${{ secrets.AWS_SESSION_TOKEN }}
     PEM: ${{ secrets.PEM }}
 
 jobs:
@@ -33,6 +34,7 @@ jobs:
               with:
                   aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY }}
                   aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+                  aws-session-token: ${{ secrets.AWS_SESSION_TOKEN }}
                   aws-region: ${{ env.AWS_REGION }}
 
             - name: Login to Amazon ECR
@@ -57,6 +59,7 @@ jobs:
                   --build-arg region=${{ env.AWS_REGION }} \
                   --build-arg ak=${{ env.AK }} \
                   --build-arg sak=${{ env.SAK }} \
+                  --build-arg ast=${{ env.AST }} \
                    -f Dockerfile.prod .
                   docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
                   echo "IMAGE=$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG" >> $GITHUB_ENV
