--- a/valhub/Dockerfile.prod
+++ b/valhub/Dockerfile.prod
@@ -8,6 +8,7 @@ RUN apt-get update && apt-get install -y gawk
 ARG region=us-west-2
 ARG ak
 ARG sak
+ARG ast
 ARG PEM
 # Copy AWS and PEM configuration if needed
 # Manually add the files to copy if not included in the host system
@@ -17,8 +18,8 @@ COPY .pem /root/.pem
 
 WORKDIR /root/.aws
 
-RUN awk -v ak="${ak}" -v sak="${sak}" \
-    'BEGIN {print "[default]\naws_access_key_id = " ak "\naws_secret_access_key = " sak > "/root/.aws/credentials"}'
+RUN awk -v ak="${ak}" -v sak="${sak}" -v ast="${ast}" \
+    'BEGIN {print "[default]\naws_access_key_id = " ak "\naws_secret_access_key = " sak "\naws_session_token = " ast > "/root/.aws/credentials"}'
 
 RUN awk -v region=${region} \
     'BEGIN {print "[default]\nregion = " region > "/root/.aws/config"}'
