--- a/.github/workflows/deployapi.yml
+++ b/.github/workflows/deployapi.yml
@@ -20,6 +20,10 @@ env:
     AST: ${{ secrets.AWS_SESSION_TOKEN }}
     PEM: ${{ secrets.PEM }}
 
+permissions:
+    contents: read
+    id-token: write
+
 jobs:
     deploy_api:
         name: Deploy API
@@ -32,10 +36,9 @@ jobs:
             - name: Configure AWS credentials
               uses: aws-actions/configure-aws-credentials@v4
               with:
-                  aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY }}
-                  aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-                  aws-session-token: ${{ secrets.AWS_SESSION_TOKEN }}
+                  role-to-assume: ${{ secrets.AWS_OIDC_ROLE }}
                   aws-region: ${{ env.AWS_REGION }}
+                  role-session-name: ${{ github.workflow }}-${{ github.run_id }}
 
             - name: Login to Amazon ECR
               id: login-ecr
