--- a/.github/workflows/deployfe.yml
+++ b/.github/workflows/deployfe.yml
@@ -61,10 +61,9 @@ jobs:
             - name: Configure AWS Credentials
               uses: aws-actions/configure-aws-credentials@v4
               with:
-                  aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY }}
-                  aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-                  aws-session-token: ${{ secrets.AWS_SESSION_TOKEN }}
+                  role-to-assume: ${{ secrets.AWS_GITHUB_OIDC_ROLE }}
                   aws-region: ${{ env.AWS_REGION }}
+                  role-session-name: ${{ github.workflow }}-${{ github.run_id }}
 
             - name: Retrieve saved Build
               uses: actions/download-artifact@v4
