--- a/.github/workflows/deployworker.yml
+++ b/.github/workflows/deployworker.yml
@@ -29,10 +29,9 @@ jobs:
             - name: Configure AWS credentials
               uses: aws-actions/configure-aws-credentials@v4
               with:
-                  aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY }}
-                  aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-                  aws-session-token: ${{ secrets.AWS_SESSION_TOKEN }}
+                  role-to-assume: ${{ secrets.AWS_GITHUB_OIDC_ROLE }}
                   aws-region: ${{ env.AWS_REGION }}
+                  role-session-name: ${{ github.workflow }}-${{ github.run_id }}
 
             - name: Login to Amazon ECR
               id: login-ecr
