--- a/.github/workflows/deployapi.yml
+++ b/.github/workflows/deployapi.yml
@@ -11,6 +11,7 @@ env:
     ECS_API_SERVICE: ${{ vars.ECS_API_SERVICE }}
     ECS_API_CLUSTER: ${{ vars.ECS_API_CLUSTER }}
     API_TASK_DEFINITION_NAME: ${{ vars.API_TASK_DEFINITION_NAME }}
+    AWS_GITHUB_OIDC_ROLE: ${{ vars.AWS_GITHUB_OIDC_ROLE }}
     DJANGOSK: ${{ secrets.DJANGOSK }}
     ADU: ${{ secrets.ADU }}
     ADP: ${{ secrets.ADP }}
@@ -36,7 +37,7 @@ jobs:
             - name: Configure AWS credentials
               uses: aws-actions/configure-aws-credentials@v4
               with:
-                  role-to-assume: ${{ secrets.AWS_OIDC_ROLE }}
+                  role-to-assume: ${{ env.AWS_GITHUB_OIDC_ROLE }}
                   aws-region: ${{ env.AWS_REGION }}
                   role-session-name: ${{ github.workflow }}-${{ github.run_id }}
 
