--- a/.github/workflows/deployfe.yml
+++ b/.github/workflows/deployfe.yml
@@ -8,7 +8,7 @@ on:
 env:
     AWS_REGION: ${{ vars.AWS_REGION }}
     AWS_S3_WEBSITE_BUCKET: ${{ vars.AWS_S3_WEBSITE_BUCKET }}
-    AWS_GITHUB_OIDC_ROLE: ${{ vars.AWS_GITHUB_OIDC_ROLE }}
+    AWS_GITHUB_OIDC_ROLE_ARN: ${{ secrets.AWS_GITHUB_OIDC_ROLE_ARN }}
 
 jobs:
     build_fe:
@@ -62,7 +62,7 @@ jobs:
             - name: Configure AWS Credentials
               uses: aws-actions/configure-aws-credentials@v4
               with:
-                  role-to-assume: ${{ env.AWS_GITHUB_OIDC_ROLE }}
+                  role-to-assume: ${{ env.AWS_GITHUB_OIDC_ROLE_ARN }}
                   aws-region: ${{ env.AWS_REGION }}
                   role-session-name: ${{ github.workflow }}-${{ github.run_id }}
 
