--- a/.github/workflows/deployworker.yml
+++ b/.github/workflows/deployworker.yml
@@ -76,3 +76,4 @@ jobs:
                   service: ${{ env.ECS_WORKER_SERVICE }}
                   cluster: ${{ env.ECS_WORKER_CLUSTER }}
                   wait-for-service-stability: true
+                  force-new-deployment: true
