Added worker user and password

--- a/.env.example
+++ b/.env.example
@@ -4,5 +4,7 @@ POSTGRES_USER=valhub
 admin_username=admin
 admin_password=admin
 admin_email=admin@admin.com
+worker_username=worker
+worker_password=worker_password
 DOCKER_HOST_VOLUME_DATA_DIR="<path-to-repository>/<repo-name>/workers/current_evaluation/data"
 DOCKER_HOST_VOLUME_RESULTS_DIR="<path-to-repository>/<repo-name>/workers/current_evaluation/results"
