--- a/workers/Dockerfile.prod
+++ b/workers/Dockerfile.prod
@@ -49,9 +49,10 @@ RUN apt-get update -qq && \
     ca-certificates \
     curl \
     gnupg2 \
-    software-properties-common \
     && \
     apt-get clean
+
+RUN apt-get update && apt-get clean && apt-get install -y build-essential
 
 RUN apt-get update
 RUN apt-get install -y ca-certificates curl
