--- a/workers/Dockerfile.prod
+++ b/workers/Dockerfile.prod
@@ -1,4 +1,4 @@
-FROM python:3.11-slim
+FROM python:3.1q-slim
 
 # docker build --progress=plain -t "hmm:Dockerfile" -f valhub/Dockerfile .
 WORKDIR /root
@@ -49,7 +49,6 @@ RUN apt-get update -qq && \
     ca-certificates \
     curl \
     gnupg2 \
-    software-properties-common \
     && \
     apt-get clean
 
